@@ -187,8 +187,9 @@ a regular basis, we should check if using freelists would speed this up. See
 also <cite>Performance tuning/testing</cite>.</p>
 <h3><a href="#id19" name="formal-protocols-distributed-objects">Formal Protocols, Distributed Objects</a></h3>
 <p><code><span>DO</span></code> seems to use formal protocols, we don't fully support those. There is 
-an equivalent to <code><span>@protocol(Foo)</span></code>, but it is not yet possible to define
-new protocols in Python.</p>
+an equivalent to <code><span>@protocol(Foo)</span></code>, and classes can declare that they
+implement formal protocols, but it is not yet possible to define
+a new formal protocol in Python.</p>
 <h3><a href="#id20" name="links-to-apple-documentation">Links to Apple documentation</a></h3>
 <p>Links to Apple documentation are not stable, can we add a layer of indirection
 here, e.g. link to the PyObjC website that will redirect to the right
